1. Fix type in chat box. Chat is now visible again, when telnet is active. 2. Give map win points the team colors.

--- a/public/css/score-bar.css
+++ b/public/css/score-bar.css
@@ -114,7 +114,6 @@
 .dot-win {
     width: 0.3em;
     height: 0.6em;
-    background: white;
     border-radius: 25%;
     display: inline-block;
 }
